--- a/src/app/settings-modal/input-date-settings.scss
+++ b/src/app/settings-modal/input-date-settings.scss
@@ -11,7 +11,6 @@
     flex-direction: column;
     padding: 0 0.25rem;
     padding-bottom: 2rem;
-    height: 38rem;
 
     .settings-header {
       display: flex;
